--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint --ignore-path .gitignore ."
   },
+  "type": "module",
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^1.0.0-next.0",
-    "@sveltejs/kit": "^1.0.0-next.1",
+    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-static": "next",
+    "@sveltejs/kit": "next",
     "@types/cookie": "^0.4.1",
+    "@types/faker": "^5.5.9",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "eslint": "^7.32.0",
@@ -26,12 +29,12 @@
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   },
-  "type": "module",
   "dependencies": {
     "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
     "@windicss/plugin-interaction-variants": "^1.0.0",
     "cookie": "^0.4.1",
+    "faker": "^5.5.3",
     "tailwindcss": "^3.0.7",
     "vite-plugin-windicss": "^1.6.1",
     "windicss": "^3.4.0"
